tests/suite/pass/generated/lexer/pass_empty_string.ny
fn main() {
    let s = ""
    print(0)
}
