tests/suite/fail/generated/stderr_full/stderr_import_missing.ny
import "stdlib/no_such_module_xyz.ny"
fn main() {
    print(0)
}
